--- a/water_trading_exercise.html
+++ b/water_trading_exercise.html
@@ -344,7 +344,7 @@
   </div>
 
   <div class="hint-box" id="hint-box">
-    <strong>Thinking it through:</strong> At each price, decide which crops are worth growing. A crop is worth cultivating if its <strong>yield per ML</strong> is greater than the market price (because you'd earn more using the water on the crop than selling it). If a crop isn't worth growing, set its HA to 0.
+    <strong>Thinking it through:</strong> At each price, decide which crops are worth growing. A crop is worth cultivating if the dollar value of its <strong>yield per ML</strong> is greater than the additional input cost to cultivate it. Would you earn more using your water allocation on the crop or selling it? If a crop isn't worth growing, set its HA to 0.
   </div>
 
   <div class="feedback" id="feedback"></div>
