--- a/water_trading_exercise.html
+++ b/water_trading_exercise.html
@@ -310,7 +310,7 @@
   </div>
 
   <div class="scenario">
-    <div class="question">At each price, how many ML would you BUY (+) or SELL (−)?</div>
+    <div class="question">At each price, how many ML of water would you BUY (+) or SELL (−)?</div>
     You farm <strong>10 HA of rice</strong> and <strong>10 HA of citrus</strong> in the North basin. You have an entitlement for <strong>150 ML</strong> of water for the year.
     <ul>
       <li>Your citrus requires <strong>6 ML/HA</strong> and yields <strong>$220 per ML</strong> applied</li>
@@ -322,7 +322,7 @@
     <table id="exercise-table">
       <thead>
         <tr>
-          <th>Price<br>per ML</th>
+          <th>Price<br>per ML water</th>
           <th class="input-col">HA cultivated<br>citrus</th>
           <th>ML for citrus<br>(HA × 6)</th>
           <th class="input-col">HA cultivated<br>rice</th>
@@ -344,7 +344,7 @@
   </div>
 
   <div class="hint-box" id="hint-box">
-    <strong>Thinking it through:</strong> At each price, decide which crops are worth growing. A crop is worth cultivating if the dollar value of its <strong>yield per ML</strong> is greater than the additional input cost to cultivate it. Would you earn more using your water allocation on the crop or selling it? If a crop isn't worth growing, set its HA to 0.
+    <strong>Thinking it through:</strong> At each price, decide which crops are worth growing. A crop is worth cultivating if the dollar value of its yield per ML is greater than the additional input cost to cultivate it. Would you earn more using your water allocation on the crop or selling it? If a crop isn't worth growing, set its HA to 0.
   </div>
 
   <div class="feedback" id="feedback"></div>
